--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="btn">
                     <button><i class="bi bi-linkedin"> </i> <a href="https://www.linkedin.com/in/gidiniz" target="_blank">LinkedIn</a></button>
                     <button><i class="bi bi-github"> </i> <a href="https://github.com/Ginizu" target="_blank">Github</a></button>
-                    <button><i class="bi bi-download"></i> <a href="doc/" download="Giovanna Dev - CV.pdf">CV</a></button>
+                    <button><i class="bi bi-download"></i> <a href="doc/Giovanna Dev - CV.pdf" download="Giovanna Dev - CV.pdf">CV</a></button>
                 </div>
             </div>
 
