--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section class="main">
             <div class="background__img">
-                <img src="imgs/boliviainteligente-37WxvlfW3to-unsplash.jpg" alt="Foto Fundo" >
+                <img src="imgs/boliviainteligente-37WxvlfW3to-unsplash.jpg" alt="Foto Fundo"  width="2000">
             </div>
 
             <div class="main__foreground">
