--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <title>Giovanna Diniz</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="icon" href="imgs/icons8-código-fonte-48.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <a href="#" class="logo"> < /Giovanna >.</a>
+        <a href="#home" class="logo"> < /Giovanna >.</a>
         <nav class="navbar">
-                <a href="#main">Home</a>
+                <a href="#home">Home</a>
                 <a href="#project">Projetos</a>
                 <a href="#about">Sobre mim</a>
                 <a href="#contact">Contatos</a>
         </nav>
     </header>
     <main>
-        <section class="main">
+        <section id="home" class="main">
             <div class="background__img">
                 <img src="imgs/boliviainteligente-37WxvlfW3to-unsplash.jpg" alt="Foto Fundo"  width="2000">
             </div>
@@ -33,9 +34,9 @@
                 Possuo conhecimentos em desenvolvimento, com base em tecnologias como HTML, CSS e JavaScript.
                 </p>
                 <div class="btn">
-                    <button><i class="bi bi-linkedin"> </i> <a href="https://www.linkedin.com/in/gidiniz" target="_blank">LinkedIn</a></button>
-                    <button><i class="bi bi-github"> </i> <a href="https://github.com/Ginizu" target="_blank">Github</a></button>
-                    <button><i class="bi bi-download"></i> <a href="doc/Giovanna Dev - CV.pdf" download="Giovanna Dev - CV.pdf">CV</a></button>
+                    <a href="https://www.linkedin.com/in/gidiniz" target="_blank"><button><i class="bi bi-linkedin"> </i>LinkedIn</button></a>
+                    <a href="https://github.com/Ginizu" target="_blank"><button><i class="bi bi-github"> </i>Github</button></a>
+                    <a href="doc/Giovanna Dev - CV.pdf" download="Giovanna Dev - CV.pdf"><button><i class="bi bi-download"></i> CV</button></a>
                 </div>
             </div>
 
@@ -46,10 +47,10 @@
                 <h3>Projetos</h3>
                     <div class="flex">
                         <div class="img__project" style="background-image: url(imgs/Alessiospizza.png);">
-                            <div class="overlay"><a href="Execicio-extra/index.html" target="_blank" >Alessio's Pizzaria</a></div>
+                            <a href="Alessios-pizzaria/index.html" target="_blank" ><div class="overlay">Alessio's Pizzaria</div></a>
                         </div>
                         <div class="img__project" style="background-image: url(imgs/Seaworld.png);">
-                            <div class="overlay"><a href="projeto-pratico/index.html" target="_blank">Seal World</a></div>
+                            <a href="Sealworld/index.html" target="_blank"><div class="overlay">Seal World</div></a>
                         </div>
                     </div>
                     <div class="flex">
@@ -114,13 +115,13 @@
                         <p>📬 Vamos conversar?</p>
                         <p>Se você se interessou pelo meu perfil ou pelos projetos que desenvolvi, ficarei feliz em trocar uma ideia!
                         Entre em contato comigo por e-mail ou pelo LinkedIn — estou aberta a oportunidades, colaborações ou apenas um bom papo sobre tecnologia.</p>
-                            <div class="btn">
-                                <div class="btn__contact">
-                                    <button><i class="bi bi-envelope-at-fill"></i> <a href="mailto:diniztorres.giovanna@gmail.com" target="_blank" >diniztorres.giovanna@gmail.com</a></button>
-                                    <button><i class="bi bi-linkedin"> </i> <a href="https://www.linkedin.com/in/gidiniz" target="_blank">LinkedIn</a></button>
-                                    <button><i class="bi bi-github"> </i> <a href="https://github.com/Ginizu" target="_blank">Github</a></button>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="btn">
+                    <div class="btn__contact">
+                        <a href="mailto:diniztorres.giovanna@gmail.com" target="_blank" ><button><i class="bi bi-envelope-at-fill"></i> diniztorres.giovanna@gmail.com</button></a>
+                        <a href="https://www.linkedin.com/in/gidiniz" target="_blank"><button><i class="bi bi-linkedin"> </i>LinkedIn</button></a>
+                        <a href="https://github.com/Ginizu" target="_blank"><button><i class="bi bi-github"> </i> Github</button></a>
                     </div>
                 </div>
             </div>
@@ -130,7 +131,7 @@
         <div class="inter">
             <div class="flex">
                 <ul class="navfooter">
-                    <a href="#main">Home</a>
+                    <a href="#home">Home</a>
                     <a href="#project">Projetos</a>
                     <a href="#about">Sobre mim</a>
                     <a href="#contact">Contatos</a>
@@ -138,8 +139,8 @@
            
                 <div class="end">
                     <p>&copy; Ginizu</p>
-                    <button><a href="https://www.linkedin.com/in/gidiniz" target="_blank"><i class="bi bi-linkedin"></i></a></button>
-                    <button><a href="https://github.com/Ginizu" target="_blank"><i class="bi bi-github"></i></a></button>
+                    <a href="https://www.linkedin.com/in/gidiniz" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                    <a href="https://github.com/Ginizu" target="_blank"><button><i class="bi bi-github"></i></button></a>
                         <div class="made">
                             Made with
                             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="#f64348" stroke="#f64348" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
